--- a/static/index.html
+++ b/static/index.html
@@ -1,4 +1,40 @@
-<form action="http://127.0.0.1:5000/upload" method="POST" enctype="multipart/form-data">
-  <input type="file" name="document" accept=".docx">
-  <input type="submit" value="Upload">
+<form action="/upload" method="POST" enctype="multipart/form-data">
+  <input type="file" name="document" id="fileInput" acceptx=".docx">
+  <input type="button" value="Upload" onclick="uploadFile()">
+  <progress id="progressBar" value="0" max="100"></progress>
+  <div id="uploadMessage" style="display: none;"></div>
 </form>
+
+<script>
+  function uploadFile() {
+    var fileInput = document.getElementById("fileInput");
+    var progressBar = document.getElementById("progressBar");
+    var uploadMessage = document.getElementById("uploadMessage");
+
+    var file = fileInput.files[0];
+    var xhr = new XMLHttpRequest();
+
+    xhr.upload.addEventListener("progress", function(event) {
+      if (event.lengthComputable) {
+        var percentComplete = (event.loaded / event.total) * 100;
+        progressBar.value = percentComplete;
+      }
+    });
+
+    xhr.addEventListener("load", function() {
+      if (xhr.status === 200) {
+        uploadMessage.style.display = "block";
+        uploadMessage.innerText = "File uploaded successfully!";
+      } else {
+        uploadMessage.style.display = "block";
+        uploadMessage.innerText = "File upload failed.";
+      }
+    });
+
+    
+    xhr.open("POST", "/upload");
+    var formData = new FormData();
+    formData.append("document", file);
+    xhr.send(formData);
+  }
+</script>
